--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
         "@ionic-native/ionic-webview": "^5.0.0",
         "@ionic-native/splash-screen": "5.0.0",
         "@ionic-native/status-bar": "5.0.0",
-        "@ionic/angular": "4.0.2",
+        "@ionic/angular": "^4.8.1",
         "@ionic/pro": "2.0.3",
         "cordova-android": "^7.0.0",
         "cordova-ios": "4.5.5",
-        "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-device": "^2.0.3",
         "cordova-plugin-ionic-keyboard": "^2.1.3",
-        "cordova-plugin-ionic-webview": "^2.4.0",
-        "cordova-plugin-splashscreen": "^5.0.2",
-        "cordova-plugin-statusbar": "^2.4.2",
-        "cordova-plugin-telerik-imagepicker": "^2.2.4",
-        "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-plugin-ionic-webview": "^2.5.1",
+        "cordova-plugin-splashscreen": "^5.0.3",
+        "cordova-plugin-statusbar": "^2.4.3",
+        "cordova-plugin-telerik-imagepicker": "^2.3.3",
+        "cordova-plugin-whitelist": "^1.3.4",
         "core-js": "^2.5.4",
         "firebase": "^5.7.0",
         "rxjs": "~6.3.3",
